Split utils file, and move more functions to the MEMDATA class

--- a/play_math.ipynb
+++ b/play_math.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -63,224 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0], [1], [2], [3], [4], [5], [6]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "test = []\n",
-    "for i in range(7):\n",
-    "    test.append([i])\n",
-    "print(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't', 'c', 'a', 't']\n"
-     ]
-    }
-   ],
-   "source": [
-    "cat = 'cat'\n",
-    "out = []\n",
-    "for i in range(7):\n",
-    "    out += list(cat) + list(cat)\n",
-    "print(out)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = [0, 12, 12, 2, 3, 4, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 12, 12, 2]"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y[:4] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2]\n",
-      "[3]\n",
-      "[4]\n",
-      "[5]\n",
-      "[6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(2, len(test)):\n",
-    "    print(test[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CleanData:\n",
-    "    \"\"\" Clean data, tokenizer, helper functions \"\"\"\n",
-    "\n",
-    "    def __init__(self, mem_slots):\n",
-    "        self.mem_slots = mem_slots\n",
-    "        self.vocab = ['pad', 'answer', 'mem', 'right', 'wrong', 'finish'] + list(' ' + string.punctuation + string.digits + string.ascii_uppercase + string.ascii_lowercase)\n",
-    "        self.vocab_size = len(self.vocab) \n",
-    "        # Max input characters plus max answer characters, 160 + 32 in original dataset\n",
-    "        self.max_src = 0\n",
-    "        self.max_trg = 0\n",
-    "        self.block_size = 0\n",
-    "        self.t = {k: v for v, k in enumerate(self.vocab)} # Character to ID\n",
-    "        self.idx = {v: k for k, v in self.t.items()} # ID to Character\n",
-    "    \n",
-    "    def initiate_mem_slot_data(self, fname):\n",
-    "        # split up all addition problems into either training data or test data\n",
-    "        # head_tail = os.path.split(fname) \n",
-    "        src, trg = [], []\n",
-    "        with open(fname, \"r\") as file:\n",
-    "            text = file.read()[:-1] # Excluding the final linebreak\n",
-    "            text_list = text.split('\\n')\n",
-    "            src = text_list[0:][::2]\n",
-    "            trg = text_list[1:][::2]\n",
-    "        \n",
-    "        os.remove(fname)\n",
-    "        with open(fname, \"a\") as file:\n",
-    "            for src, trg in zip(src, trg):\n",
-    "                file.write(src + '\\n')\n",
-    "                file.write(trg + '\\n')\n",
-    "                for _ in range(self.mem_slots):\n",
-    "                     file.write('\\n')\n",
-    "    \n",
-    "    def prepare_data(self, fname):\n",
-    "        # split up all addition problems into either training data or test data\n",
-    "        # head_tail = os.path.split(fname)\n",
-    "        dataset = []\n",
-    "        for _ in range(self.mem_slots + 2):\n",
-    "            dataset.append([])\n",
-    "        with open(fname, \"r\") as file:\n",
-    "            text = file.read()[:-1] # Excluding the final linebreak\n",
-    "            text_list = text.split('\\n')\n",
-    "            for i in range(self.mem_slots + 2):\n",
-    "                dataset[i] = text_list[i:][::self.mem_slots + 2]\n",
-    "        \n",
-    "        self.max_src = len(max(dataset[0], key=len)) + 1# +1 for ending token\n",
-    "        self.max_trg = len(max(dataset[1], key=len)) + 1 # +1 for ending token\n",
-    "        \n",
-    "        # Src tokens, target tokens, memory tokens, and corresponding end tokens\n",
-    "        self.block_size = self.max_src + (self.max_trg * (self.mem_slots + 1)) + 1 # An extra for right/wrong token\n",
-    "        return dataset\n",
-    "    \n",
-    "    def sort_data_by_len(self, indexes, data):\n",
-    "        test_data_by_length = []\n",
-    "        for index in indexes:\n",
-    "            test_data_by_length.append([index, len(data[index])])\n",
-    "        test_data_by_length = sorted(test_data_by_length, key=lambda x: x[1])\n",
-    "        return [i[0] for i in test_data_by_length]\n",
-    "    \n",
-    "    def create_x_y_pair(self, data):\n",
-    "        src = list(data[0]) + ['answer'] \n",
-    "        trg = list(data[1]) + ['finish']\n",
-    "        mem = []\n",
-    "        if self.mem_slots:\n",
-    "            for i in range(2, len(data)):\n",
-    "                mem += list(data[i]) + ['mem']\n",
-    "            \n",
-    "        return src, mem, trg\n",
-    "    \n",
-    "    def x2Canvas(self, src_mem_trg):\n",
-    "        x = [self.t['pad']] * self.block_size\n",
-    "        x[:len(src_mem_trg[:-1])] = src_mem_trg[:-1]\n",
-    "        return x\n",
-    "    \n",
-    "    def y2Canvas(self, src_mem_trg):\n",
-    "        y = [self.t['pad']] * self.block_size\n",
-    "        y[:len(src_mem_trg[1:])] = src_mem_trg[1:]\n",
-    "        return y\n",
-    "    \n",
-    "    def list2tokens(self, src_mem_trg):\n",
-    "        return [self.t[tok] for tok in src_mem_trg]\n",
-    "        \n",
-    "    def tensor2string(self, tensor):\n",
-    "        return ''.join([self.idx[tok] for tok in tensor.tolist()])\n",
-    "    \n",
-    "    def string2digits(self, string):\n",
-    "        return ''.join([self.t[tok] for tok in string])\n",
-    "    \n",
-    "    def mask_padding(self, digits):\n",
-    "        return [-100 if tok == self.t['pad'] else tok for tok in digits]\n",
-    "    \n",
-    "    def mask_question_memory(self, y, src, mem):\n",
-    "        src_mem = src + mem\n",
-    "        y[:len(src_mem)] = -100\n",
-    "        return y\n",
-    "\n",
-    "    def locate_token(self, token, tensor):\n",
-    "        return None if self.t[token] not in tensor.tolist() else tensor.tolist().index(self.t[token])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,24 +78,12 @@
     "    \n",
     "    \"\"\"\n",
     "\n",
-    "    def __init__(self, fname, split, CD):\n",
-    "        self.split = split # train/test\n",
-    "        self.CD = CD\n",
-    "        self.mem_slots = CD.mem_slots\n",
-    "         \n",
-    "        self.dataset = self.CD.prepare_data(fname) # Extract data, source, memory, and target\n",
-    "        src = self.dataset[0]\n",
-    "        data_len = len(src) \n",
+    "    def __init__(self, fname, MD):\n",
+    "        self.CD = MD\n",
+    "        self.mem_slots = MD.mem_slots\n",
+    "        self.dataset = self.MD.prepare_data(fname) # Extract data, source, memory, and target        \n",
+    "        self.ixes = np.array(list(range(len(self.dataset)))) \n",
     "        \n",
-    "        r = np.random.RandomState(1337) # make deterministic\n",
-    "        perm = r.permutation(data_len) # Create random indexes\n",
-    "       \n",
-    "        num_test = int(data_len*0.1) # 10% of the whole dataset\n",
-    "        test_ixes = self.CD.sort_data_by_len(perm[:num_test], src) # Sort testset by lenght, makes prediction easier\n",
-    "        \n",
-    "        self.ixes = np.array(test_ixes) if split == 'test' else perm[num_test:]\n",
-    "        \n",
-    "\n",
     "    def __len__(self):\n",
     "        return self.ixes.size\n",
     "\n",
@@ -322,23 +93,22 @@
     "        for i in range(self.mem_slots + 2):\n",
     "            xy.append(self.dataset[i][idx])\n",
     "            \n",
-    "        src, mem, trg = self.CD.create_x_y_pair(xy)\n",
-    "        print(src+mem+trg)\n",
-    "        src_mem_trg = self.CD.list2tokens(src + mem + trg)\n",
-    "        x = self.CD.x2Canvas(src_mem_trg)\n",
-    "        y = self.CD.y2Canvas(src_mem_trg)\n",
-    "        y = self.CD.mask_padding(y)\n",
+    "        src, mem, trg = self.MD.create_x_y_pair(xy)\n",
+    "        src_mem_trg = self.MD.list2tokens(src + mem + trg)\n",
+    "        x = self.MD.x2Canvas(src_mem_trg)\n",
+    "        y = self.MD.y2Canvas(src_mem_trg)\n",
+    "        y = self.MD.mask_padding(y)\n",
     "\n",
     "        x = torch.tensor(x, dtype=torch.long)\n",
     "        y = torch.tensor(y, dtype=torch.long) \n",
-    "        y = self.CD.mask_question_memory(y, src, mem) # we will only train in the output locations. -100 will mask loss to zero\n",
+    "        y = self.MD.mask_question_memory(y, src, mem) # we will only train in the output locations. -100 will mask loss to zero\n",
     "        \n",
     "        return x, y\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,122 +130,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mingpt.md import MemData\n",
     "memory_slots = 7\n",
-    "CD = CleanData(memory_slots)\n",
-    "CD.initiate_mem_slot_data(easy)"
+    "MD = MemData(memory_slots)\n",
+    "MD.initiate_mem_slot_data(hard)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_dataset = MathDataset(fname=easy, split='test', CD=CD)"
+    "# create a dataset \n",
+    "easy_test = 'run/test_numbers__place_value.txt'\n",
+    "medium_test = 'run/test_numbers__is_prime.txt'\n",
+    "hard_test = 'run/test_numbers__list_prime_factors.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset = MathDataset(fname=hard_test, CD=CD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test_dataset[23]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['W', 'h', 'a', 't', ' ', 'i', 's', ' ', 't', 'h', 'e', ' ', 'm', 'i', 'l', 'l', 'i', 'o', 'n', 's', ' ', 'd', 'i', 'g', 'i', 't', ' ', 'o', 'f', ' ', '9', '9', '6', '7', '1', '9', '3', '?', 'answer', 'mem', 'mem', 'mem', 'mem', 'mem', 'mem', 'mem', '9', 'finish']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(tensor([71, 82, 75, 94,  6, 83, 93,  6, 94, 82, 79,  6, 87, 83, 86, 86, 83, 89,\n",
-       "         88, 93,  6, 78, 83, 81, 83, 94,  6, 89, 80,  6, 48, 48, 45, 46, 40, 48,\n",
-       "         42, 27,  1,  2,  2,  2,  2,  2,  2,  2, 48,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0]),\n",
-       " tensor([-100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,    5, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100, -100,\n",
-       "         -100, -100, -100, -100]))"
+       "283"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_dataset[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = AdditionDataset(fname=easy, split='train', CD)"
+    "CD.block_size"
    ]
   },
   {
