Previous memory slot for data file and data loaders

--- a/play_math.ipynb
+++ b/play_math.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,37 @@
     "from torch.nn import functional as F\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = list(range(8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5, 6, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if test[2] not in test[2:]:\n",
+    "    print('Hey')\n",
+    "test[2:-1] + test[2:-1]"
    ]
   },
   {
@@ -90,7 +121,7 @@
     "    def __getitem__(self, idx):\n",
     "        \n",
     "        xy = []\n",
-    "        for i in range(self.mem_slots + 2):\n",
+    "        for i in range(self.mem_slots + 3):\n",
     "            xy.append(self.dataset[i][idx])\n",
     "            \n",
     "        src, mem, trg = self.MD.create_x_y_pair(xy)\n",
