Remove bug in dataloader

--- a/run_loop.ipynb
+++ b/run_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "12/17/2020 05:57:26 - INFO - mingpt.model -   number of parameters: 3.284480e+06\n"
+      "12/17/2020 07:25:16 - INFO - mingpt.model -   number of parameters: 3.284480e+06\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "epoch 1 iter 210: train loss 1.42055. lr 5.999894e-04:   9%|▉         | 211/2344 [01:19<13:21,  2.66it/s]"
+      "epoch 1 iter 335: train loss 1.38401. lr 5.999732e-04:  14%|█▍        | 335/2344 [02:00<12:03,  2.78it/s]"
      ]
     }
    ],
@@ -176,7 +176,7 @@
     "    # Trainer Config\n",
     "    tconf = TrainerConfig(max_epochs=epoch, batch_size=256, learning_rate=6e-4,\n",
     "                      lr_decay=True, warmup_tokens=1024, final_tokens=epoch*len(train_dataset)*(MD.vocab_size+1),\n",
-    "                      num_workers=0)\n",
+    "                      num_workers=6)\n",
     "    \n",
     "    # Create the first training round\n",
     "    print(\"Training: \", str(current_it))\n",
