Basic loop running

--- a/run_loop.ipynb
+++ b/run_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,19 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "284\n",
-      "102\n",
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(MD.block_size)\n",
     "print(MD.vocab_size)\n",
@@ -110,46 +100,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12/17/2020 07:25:16 - INFO - mingpt.model -   number of parameters: 3.284480e+06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initialize a baby GPT model\n",
-    "mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
-    "                  n_layer=4, n_head=8, n_embd=256)\n",
-    "model = GPT(mconf)"
+    "#mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
+    "#                  n_layer=4, n_head=8, n_embd=256)\n",
+    "#model = GPT(mconf)\n",
+    "model = torch.load('12.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Main Dataset\n",
-      "\n",
-      "Training:  0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 1 iter 335: train loss 1.38401. lr 5.999732e-04:  14%|█▍        | 335/2344 [02:00<12:03,  2.78it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_it = 100\n",
     "main_epoch = 5\n",
@@ -174,7 +140,7 @@
     "        epoch = marker_epoch\n",
     "    \n",
     "    # Trainer Config\n",
-    "    tconf = TrainerConfig(max_epochs=epoch, batch_size=256, learning_rate=6e-4,\n",
+    "    tconf = TrainerConfig(max_epochs=epoch, batch_size=358, learning_rate=6e-4,\n",
     "                      lr_decay=True, warmup_tokens=1024, final_tokens=epoch*len(train_dataset)*(MD.vocab_size+1),\n",
     "                      num_workers=6)\n",
     "    \n",
