--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "# Add memory data structure to training data\n",
     "memory_slots = 7\n",
-    "MD = MemData(memory_slots)\n",
+    "MD = MemData(memory_slots, debug=500)\n",
     "MD.initiate_mem_slot_data(fn_data)"
    ]
   },
@@ -104,9 +104,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "268\n",
+      "262\n",
       "102\n",
-      "28\n"
+      "27\n"
      ]
     }
    ],
@@ -135,100 +135,32 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "12/20/2020 08:57:39 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/7.pth\n",
+      "  0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Marker Data:  0.2\n",
-      "Training:  7\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 1 iter 25: train loss 1.51930. lr 5.991565e-04: 100%|██████████| 26/26 [00:12<00:00,  2.17it/s]\n",
-      "12/20/2020 05:44:06 - INFO - mingpt.trainer -   test loss: 1.480862\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Loss:  1.480862021446228\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 2 iter 25: train loss 1.38583. lr 5.965892e-04: 100%|██████████| 26/26 [00:11<00:00,  2.22it/s]\n",
-      "12/20/2020 05:44:19 - INFO - mingpt.trainer -   test loss: 1.388755\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Loss:  1.388754924138387\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 3 iter 25: train loss 1.39443. lr 5.922484e-04: 100%|██████████| 26/26 [00:11<00:00,  2.22it/s]\n",
-      "12/20/2020 05:44:31 - INFO - mingpt.trainer -   test loss: 1.356751\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Loss:  1.3567509253819783\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 4 iter 25: train loss 1.25347. lr 5.862644e-04: 100%|██████████| 26/26 [00:11<00:00,  2.22it/s]\n",
-      "12/20/2020 05:44:43 - INFO - mingpt.trainer -   test loss: 1.349944\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Loss:  1.349943995475769\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 5 iter 25: train loss 1.42814. lr 5.786254e-04: 100%|██████████| 26/26 [00:11<00:00,  2.22it/s]\n",
-      "12/20/2020 05:44:56 - INFO - mingpt.trainer -   test loss: 1.322997\n",
-      "12/20/2020 05:44:56 - INFO - mingpt.trainer -   saving models/2020-12-20~05:43:53/7.pth\n",
-      "Iiter 1 Score: 0/2:   0%|          | 2/9000 [00:00<12:16, 12.22it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Loss:  1.3229968547821045\n",
+      "Training:  7\n",
       "Exam and new dataset-------------\n",
       "\n",
       "Training exam \n",
-      "\n"
+      "\n",
+      "450\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iiter 8999 Score: 0/28355: 100%|██████████| 9000/9000 [01:04<00:00, 139.00it/s]\n",
-      "  0%|          | 0/28355 [00:00<?, ?it/s]"
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 104.86it/s]\n",
+      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 79.79it/s]"
      ]
     },
     {
@@ -236,29 +168,447 @@
      "output_type": "stream",
      "text": [
       "Adaptive Compute Iteration:  0\n",
-      "Result: 0/28355 = 0.00% correct\n",
-      "Predictions: 0/28355 = 0.00% correct\n"
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iiter 7904 Score: 0/47664:  28%|██▊       | 8044/28355 [01:43<11:56, 28.33it/s] "
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 110.05it/s]\n",
+      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 79.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  1\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 111.06it/s]\n",
+      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 78.19it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  2\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 111.45it/s]\n",
+      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 74.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  3\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 108.55it/s]\n",
+      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:06, 68.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  4\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 94.86it/s] \n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  5\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:05<00:00, 83.69it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  6\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.77it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  7\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.71it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  8\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.44it/s]\n",
+      "12/20/2020 08:58:28 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/8.pth\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  9\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "Final score: 0/450 = 0.00% correct\n",
+      "Test exam \n",
+      "\n",
+      "Marker Data:  0.2\n",
+      "Training:  8\n",
+      "Exam and new dataset-------------\n",
+      "\n",
+      "Training exam \n",
+      "\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.59it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  0\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 71.98it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  1\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.49it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  2\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.01it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  3\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.42it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  4\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.57it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  5\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 71.71it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  6\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.17it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  7\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.24it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  8\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.37it/s]\n",
+      "12/20/2020 08:59:31 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/9.pth\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  9\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "Final score: 0/450 = 0.00% correct\n",
+      "Test exam \n",
+      "\n",
+      "Marker Data:  0.2\n",
+      "Training:  9\n",
+      "Exam and new dataset-------------\n",
+      "\n",
+      "Training exam \n",
+      "\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.32it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  0\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.24it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  1\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.06it/s]\n",
+      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adaptive Compute Iteration:  2\n",
+      "Result: 0/450 = 0.00% correct\n",
+      "Predictions: 0/450 = 0.00% correct\n",
+      "450\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Iiter 272 Score: 0/273:  58%|█████▊    | 263/450 [00:03<00:02, 68.17it/s]"
      ]
     }
    ],
    "source": [
     "max_it = 100\n",
     "current_it = 7\n",
+    "batch_size = 10\n",
     "\n",
     "exp_folder = 'models/' + datetime.datetime.now().strftime('%Y-%m-%d~%H:%M:%S')\n",
-    "examiner = AdaptiveExaminer(MD)\n",
+    "examiner = AdaptiveExaminer(MD, ac=10, max_batch=batch_size)\n",
     "\n",
     "while(current_it < max_it):\n",
     "    \n",
     "    # Wait until the working memory is filled, then use 5 epochs\n",
-    "    epoch = 1 if current_it < 7 else 5\n",
+    "    epoch = 1 if current_it < 7 else 10\n",
     "    # Use marker data once the working memory is full\n",
     "    marker_data = 0.0 if current_it < 7 else 0.2\n",
     "    \n",
@@ -268,7 +618,7 @@
     "    test_dataset = MathDataset(fname=fn_test, MD=MD, marker_data=0.0)\n",
     "    \n",
     "    # Trainer Config\n",
-    "    tconf = TrainerConfig(max_epochs=epoch, batch_size=358, learning_rate=6e-4,\n",
+    "    tconf = TrainerConfig(max_epochs=epoch, batch_size=batch_size, learning_rate=6e-4,\n",
     "                      lr_decay=True, warmup_tokens=1024, final_tokens=epoch*len(train_dataset)*(MD.vocab_size+1),\n",
     "                      num_workers=6)\n",
     "    \n",
@@ -282,9 +632,9 @@
     "    \n",
     "    print(\"Exam and new dataset-------------\\n\")\n",
     "    print(\"Training exam \\n\")\n",
-    "    examiner.exam(fn_train, trainer, 5000)\n",
+    "    examiner.exam(fn_train, trainer)\n",
     "    print(\"Test exam \\n\")\n",
-    "    #examiner.exam(fn_test, trainer)\n",
+    "    #examiner.exam(fn_test, trainer, test=True)\n",
     "    \n",
     "    current_it += 1"
    ]
