--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,51 +65,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add memory data structure to training data\n",
     "memory_slots = 7\n",
-    "MD = MemData(memory_slots, debug=500)\n",
+    "MD = MemData(memory_slots, debug=0)\n",
     "MD.initiate_mem_slot_data(fn_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fn_test = 'run/test_numbers__list_prime_factors.txt'\n",
     "fn_train = 'run/train_numbers__list_prime_factors.txt'\n",
-    "train_dataset = MathDataset(fname=fn_train, MD=MD, marker_data=0.5)"
+    "train_dataset = MathDataset(fname=fn_train, MD=MD, marker_data=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#MD.tensor2string(train_dataset[4][1])"
+    "#MD.tensor2string(train_dataset[4][0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "262\n",
-      "102\n",
-      "27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(MD.block_size)\n",
     "print(MD.vocab_size)\n",
@@ -118,499 +108,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# initialize a baby GPT model\n",
-    "#mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
-    "#                  n_layer=4, n_head=8, n_embd=256)\n",
-    "#model = GPT(mconf)\n",
-    "model = torch.load('9.pth')"
+    "mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
+    "                 n_layer=4, n_head=8, n_embd=256)\n",
+    "model = GPT(mconf)\n",
+    "#model = torch.load('12.pth')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12/20/2020 08:57:39 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/7.pth\n",
-      "  0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Marker Data:  0.2\n",
-      "Training:  7\n",
-      "Exam and new dataset-------------\n",
-      "\n",
-      "Training exam \n",
-      "\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 104.86it/s]\n",
-      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 79.79it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  0\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 110.05it/s]\n",
-      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 79.13it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  1\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 111.06it/s]\n",
-      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 78.19it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  2\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 111.45it/s]\n",
-      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:05, 74.81it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  3\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 108.55it/s]\n",
-      "Iiter 12 Score: 0/13:   3%|▎         | 13/450 [00:00<00:06, 68.56it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  4\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:04<00:00, 94.86it/s] \n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  5\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:05<00:00, 83.69it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  6\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.77it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  7\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.71it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  8\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.44it/s]\n",
-      "12/20/2020 08:58:28 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/8.pth\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  9\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "Final score: 0/450 = 0.00% correct\n",
-      "Test exam \n",
-      "\n",
-      "Marker Data:  0.2\n",
-      "Training:  8\n",
-      "Exam and new dataset-------------\n",
-      "\n",
-      "Training exam \n",
-      "\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.59it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  0\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 71.98it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  1\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.49it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  2\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.01it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  3\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.42it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  4\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.57it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  5\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 71.71it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  6\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.17it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  7\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.24it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  8\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.37it/s]\n",
-      "12/20/2020 08:59:31 - INFO - mingpt.trainer -   saving models/2020-12-20~08:57:39/9.pth\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  9\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "Final score: 0/450 = 0.00% correct\n",
-      "Test exam \n",
-      "\n",
-      "Marker Data:  0.2\n",
-      "Training:  9\n",
-      "Exam and new dataset-------------\n",
-      "\n",
-      "Training exam \n",
-      "\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.32it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  0\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.24it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  1\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 449 Score: 0/450: 100%|██████████| 450/450 [00:06<00:00, 72.06it/s]\n",
-      "Iiter 2 Score: 0/2:   0%|          | 0/450 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Adaptive Compute Iteration:  2\n",
-      "Result: 0/450 = 0.00% correct\n",
-      "Predictions: 0/450 = 0.00% correct\n",
-      "450\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Iiter 272 Score: 0/273:  58%|█████▊    | 263/450 [00:03<00:02, 68.17it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_it = 100\n",
-    "current_it = 7\n",
-    "batch_size = 10\n",
+    "current_it = 0\n",
+    "batch_size = 384\n",
+    "marker_data = 0.2\n",
     "\n",
     "exp_folder = 'models/' + datetime.datetime.now().strftime('%Y-%m-%d~%H:%M:%S')\n",
-    "examiner = AdaptiveExaminer(MD, ac=10, max_batch=batch_size)\n",
     "\n",
     "while(current_it < max_it):\n",
     "    \n",
     "    # Wait until the working memory is filled, then use 5 epochs\n",
-    "    epoch = 1 if current_it < 7 else 10\n",
+    "    epoch = 1 if current_it < 7 else 1\n",
     "    # Use marker data once the working memory is full\n",
-    "    marker_data = 0.0 if current_it < 7 else 0.2\n",
+    "    #marker_data = 0.0 if current_it < 7 else 0.2\n",
+    "    ac = 1 if current_it < 7 else 10\n",
+    "    \n",
+    "    examiner = AdaptiveExaminer(MD, ac=ac, max_batch=batch_size)\n",
     "    \n",
     "    # Switch between main training and marker training\n",
     "    print(\"Marker Data: \", str(marker_data))\n",
@@ -625,7 +155,7 @@
     "    # Create the first training round\n",
     "    print(\"Training: \", str(current_it))\n",
     "    trainer = Trainer(model, train_dataset, test_dataset, tconf)\n",
-    "    trainer.train()\n",
+    "    #trainer.train()\n",
     "    trainer.save_checkpoint(exp_folder, str(current_it))\n",
     "    \n",
     "    # Examine the model and create new dataset\n",
@@ -634,7 +164,7 @@
     "    print(\"Training exam \\n\")\n",
     "    examiner.exam(fn_train, trainer)\n",
     "    print(\"Test exam \\n\")\n",
-    "    #examiner.exam(fn_test, trainer, test=True)\n",
+    "    examiner.exam(fn_test, trainer, test=True)\n",
     "    \n",
     "    current_it += 1"
    ]
@@ -644,57 +174,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "int(True == True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = True\n",
-    "hat = False\n",
-    "print(f\"This is a {cat}, and this is a {hat}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"foo.txt\", \"a\") as f:\n",
-    "     f.write(\"3new line\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "True == 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "min(None, 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-1 and 1"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
