--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -135,7 +135,7 @@
     "while(current_it < max_it):\n",
     "    \n",
     "    # Wait until the working memory is filled, then use 5 epochs\n",
-    "    epoch = 1 if current_it < 7 else 1\n",
+    "    epoch = 1 if current_it < 7 else 10\n",
     "    # Use marker data once the working memory is full\n",
     "    #marker_data = 0.0 if current_it < 7 else 0.2\n",
     "    ac = 1 if current_it < 7 else 10\n",
@@ -155,7 +155,7 @@
     "    # Create the first training round\n",
     "    print(\"Training: \", str(current_it))\n",
     "    trainer = Trainer(model, train_dataset, test_dataset, tconf)\n",
-    "    #trainer.train()\n",
+    "    trainer.train()\n",
     "    trainer.save_checkpoint(exp_folder, str(current_it))\n",
     "    \n",
     "    # Examine the model and create new dataset\n",
