Bug fix for AC and AE

--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,27 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49999"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(train_dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,19 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "257\n",
-      "102\n",
-      "27\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(MD.block_size)\n",
     "print(MD.vocab_size)\n",
@@ -139,17 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "12/21/2020 07:00:36 - INFO - mingpt.model -   number of parameters: 3.277568e+06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# initialize a baby GPT model\n",
     "mconf = GPTConfig(MD.vocab_size, MD.block_size,\n",
@@ -162,28 +133,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Iteration: 0\n",
-      "Epochs: 1\n",
-      "Size: 50000\n",
-      "Marker: 0.0\n",
-      "Warm: True\n",
-      "\n",
-      "Training:  0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "epoch 1 iter 130: train loss 1.39272. lr 5.616464e-04: 100%|██████████| 131/131 [01:01<00:00,  2.13it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "max_it = 100\n",
     "current_it = 0\n",
@@ -197,10 +147,8 @@
     "    \n",
     "    epoch, size, ac, marker_data, warmup = schedule.create(current_it)\n",
     "    \n",
-    "    examiner = AdaptiveExaminer(MD, ac=ac, max_batch=batch_size, warmup=warmup)\n",
-    "    \n",
     "    # Switch between main training and marker training\n",
-    "    print(f\"Current Iteration: {current_it}\\nEpochs: {epoch}\\nSize: {size}\\nMarker: {marker_data}\\nWarm: {warmup}\\n\")\n",
+    "    print(f\"Training Iteration: {current_it}\\n\\nEpochs: {epoch}\\nSize: {size}\\nMarker: {marker_data}\\nWarm: {warmup}\\n\")\n",
     "    \n",
     "    train_dataset = MathDataset(fname=fn_train, MD=MD, marker_data=marker_data)\n",
     "    test_dataset = MathDataset(fname=fn_test, MD=MD, marker_data=0.0) if not warmup else None\n",
@@ -211,18 +159,19 @@
     "                      num_workers=6)\n",
     "    \n",
     "    # Create the first training round\n",
-    "    print(\"Training: \", str(current_it))\n",
     "    trainer = Trainer(model, train_dataset, test_dataset, tconf)\n",
     "    trainer.train()\n",
     "    trainer.save_checkpoint(exp_folder, str(current_it))\n",
     "    \n",
     "    # Examine the model and create new dataset\n",
+    "    examiner = AdaptiveExaminer(MD, ac=ac, max_batch=batch_size, warmup=warmup)\n",
     "    \n",
-    "    print(\"Exam and new dataset-------------\\n\")\n",
     "    print(\"Training exam \\n\")\n",
     "    examiner.exam(fn_train, trainer, size, test=False)\n",
-    "    print(\"Test exam \\n\")\n",
-    "    if not warmup: examiner.exam(fn_test, trainer, size, test=True)\n",
+    "    \n",
+    "    if not warmup:\n",
+    "        print(\"Test exam \\n\")\n",
+    "        examiner.exam(fn_test, trainer, size, test=True)\n",
     "    \n",
     "    current_it += 1"
    ]
