Small bugs for adaptive loop

--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -148,7 +148,7 @@
     "    epoch, size, ac, marker_data, warmup = schedule.create(current_it)\n",
     "    \n",
     "    # Switch between main training and marker training\n",
-    "    print(f\"Training Iteration: {current_it}\\n\\nEpochs: {epoch}\\nSize: {size}\\nMarker: {marker_data}\\nWarm: {warmup}\\n\")\n",
+    "    print(f\"Training Iteration: {current_it}\\n\\nEpochs: {epoch}\\nSize: {size}\\nMarker: {marker_data}\\nWarm: {warmup}\\nAC: {ac}\\n\")\n",
     "    \n",
     "    train_dataset = MathDataset(fname=fn_train, MD=MD, marker_data=marker_data)\n",
     "    test_dataset = MathDataset(fname=fn_test, MD=MD, marker_data=0.0) if not warmup else None\n",
