--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "max_it = 100\n",
-    "current_it = 0\n",
+    "current_it = 7\n",
     "batch_size = 384\n",
     "marker_data = 0.2\n",
     "\n",
@@ -178,10 +178,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(1,3)"
+   ]
   },
   {
    "cell_type": "code",
