Bug in ac_schedule

--- a/adaptive_loop.ipynb
+++ b/adaptive_loop.ipynb
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "max_it = 100\n",
-    "current_it = 7\n",
+    "current_it = 0\n",
     "batch_size = 384\n",
     "marker_data = 0.2\n",
     "\n",
@@ -160,7 +160,7 @@
     "    \n",
     "    # Create the first training round\n",
     "    trainer = Trainer(model, train_dataset, test_dataset, tconf)\n",
-    "    trainer.train()\n",
+    "    #trainer.train()\n",
     "    trainer.save_checkpoint(exp_folder, str(current_it))\n",
     "    \n",
     "    # Examine the model and create new dataset\n",
@@ -178,20 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "min(1,3)"
    ]
